# DataDecipher

./: .gitignore  README.md  README.rst  data_decipher.py  run_tests.py  setup.cfg  setup.py  tests.py
data_decipher/: __init__.py  data_decipher.py  decipher.py
data_decipher/graph/: stat_graph.py
data_decipher/processing/: processor.py
data_decipher/tests/: processing_tests.py
data_decipher/user_interface/: ui.py
graph/: stat_graph.py
processing/: processor.py
tests/: __init__.py  test_data_processor.py
user_interface/: ui.py
