[metadata]
name = DataDecipher
author = Chae DeLaRosa
author_email = delarosa.chae@gmail.com
long_description = file: README.rst
requires-python = >=3.8.3
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python
